@@ -91,6 +91,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * StreamField block headings now have a label for screen reader users (Thibaud Colas)
  * Display the "*" required field indicator for StreamField blocks (Thibaud Colas)
  * Resolve inconsistency in action button positions in InlinePanel (Thibaud Colas)
+ * Use h3 elements with a counter in InlinePanel so screen reader users can navigate by heading (Thibaud Colas)
 
 ## Upgrade considerations
 
