@@ -52,6 +52,7 @@
         {% for child in self.children %}
             panel.initChildControls("{{ child.form.prefix }}");
         {% endfor %}
+        panel.updateChildCount();
         panel.updateMoveButtonDisabledStates();
         panel.updateAddButtonState();
     })();
